Bug fix: toc not fully visible

--- a/gui/css/jquery.tocify.css
+++ b/gui/css/jquery.tocify.css
@@ -5,12 +5,12 @@
 
 /* The Table of Contents container element */
 #toc {
-    max-height: 90%;
+    max-height: 85%;
     overflow: auto;
     position: fixed;
     border: 1px solid #ccc;
-    webkit-border-radius: 6px;
-    moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
     border-radius: 6px;
 	margin-left: 0;
 }
@@ -51,7 +51,7 @@
 
 /* Twitter Bootstrap Override Style */
 .nav-list > li > a, .nav-list .nav-header {
-    margin: 0px;
+    margin: 0;
 }
 
 /* Twitter Bootstrap Override Style */
